Ensure the embed instructions header doesn't wrap

--- a/public/stylesheets/reports.css
+++ b/public/stylesheets/reports.css
@@ -1,3 +1,7 @@
+.embed_instructions {
+  min-width: 570px;
+}
+
 .embed_instructions > div, .embed_instructions > form {
   float: left;
   width: 50%;
